<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/background"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    android:padding="30dip"
    android:orientation="horizontal">
  <LinearLayout
      android:orientation="vertical"
      android:layout_height="wrap_content"
      android:layout_width="fill_parent"
      android:layout_gravity="center">
    <TextView
        android:text="@string/app_name"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="25dip"
        android:textSize="24.5sp"/>
    <Button
        android:id="@+id/new_claim_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_claim_label"/>
    <Button
        android:id="@+id/configure_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/configure_label"/>
    <Button
        android:id="@+id/help_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/help_label"/>
    <Button
        android:id="@+id/exit_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/exit_label"/>
  </LinearLayout>
</LinearLayout>
